change all site

--- a/src/cloudqp.html
+++ b/src/cloudqp.html
@@ -17,6 +17,9 @@
                 <a href="/" class="breadcrumb-custom-link">Главная</a>
               </li>
               <li class="breadcrumb-custom-item">
+                <a href="qp.html" class="breadcrumb-custom-link">QP OS</a>
+              </li>
+              <li class="breadcrumb-custom-item">
                 Облачные технологии операционной системы QP ОС
               </li>
             </ul>
