--- a/src/mechanisms.html
+++ b/src/mechanisms.html
@@ -17,6 +17,9 @@
                 <a href="/" class="breadcrumb-custom-link">Главная</a>
               </li>
               <li class="breadcrumb-custom-item">
+                <a href="qp.html" class="breadcrumb-custom-link">QP OS</a>
+              </li>
+              <li class="breadcrumb-custom-item">
                 Основные механизмы безопасности
               </li>
             </ul>
